adding sim loop

--- a/entropy_planning.ipynb
+++ b/entropy_planning.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
     "    # update\n",
     "    x[0] = x[0]+vx*dt+noise[0]\n",
     "    x[1] = x[1]+vy*dt+noise[1]\n",
-    "    x[2] = wrap(x[2]+wz*dt)+noise[2]\n",
+    "    x[2] = x[2]+wz*dt+noise[2]\n",
     "\n",
     "    return x\n",
     "\n",
@@ -271,6 +271,62 @@
     "    G[1,1] = 1\n",
     "    G[2,2] = 1\n",
     "    return F,G\n",
+    "\n",
+    "def cam_pose_matrix(robot_pose, hc=CAM_HEIGHT):\n",
+    "    # unpack robot pose\n",
+    "    xr, yr, theta = robot_pose.flatten()\n",
+    "\n",
+    "    # robot pose matrix\n",
+    "    Rrobot = np.array([[cos(theta), -sin(theta),0],\n",
+    "                       [sin(theta), cos(theta),0],\n",
+    "                       [0,0,1]])\n",
+    "    trobot = np.array([xr,yr,0])[:,np.newaxis]\n",
+    "\n",
+    "    Trobot_inv = np.concatenate([Rrobot.T,-Rrobot.T.dot(trobot)],axis=1)\n",
+    "    Trobot_inv = np.concatenate([Trobot_inv, np.array([[0,0,0,1]])],axis=0)\n",
+    "\n",
+    "    Tbc_inv = np.array([[0,-1, 0,  0],\n",
+    "                        [0, 0,-1, hc],\n",
+    "                        [1, 0, 0,  0],\n",
+    "                        [0, 0, 0,  1]])\n",
+    "    \n",
+    "    Tcam_inv = multi_dot([Tbc_inv, Trobot_inv])\n",
+    "    return Tcam_inv\n",
+    "\n",
+    "def get_cam_frame_coord(scene_pt, Tcam_inv):\n",
+    "    xs,ys,zs = scene_pt.flatten()\n",
+    "    h_coord = np.array([xs,ys,zs,1])[:,np.newaxis]\n",
+    "    xs_hat, ys_hat, zs_hat, _ = Tcam_inv.dot(h_coord).flatten()\n",
+    "    return xs_hat, ys_hat, zs_hat\n",
+    "\n",
+    "def get_world_coord(scene_pt, Tcam_inv):\n",
+    "    xs_hat,ys_hat,zs_hat = scene_pt.flatten()\n",
+    "    h_coord = np.array([xs_hat,ys_hat,zs_hat,1])[:,np.newaxis]\n",
+    "    xs, ys, zs, _ = matinv(Tcam_inv).dot(h_coord).flatten()\n",
+    "    return xs, ys, zs\n",
+    "\n",
+    "def project(xs_hat, ys_hat, zs_hat, fx=FX,fy=FY,px=PX,py=PY):\n",
+    "    ux = fx*xs_hat/zs_hat+px\n",
+    "    uy = fx*ys_hat/zs_hat+py\n",
+    "    return ux, uy\n",
+    "\n",
+    "def observation_model(robot_pose,scene_pt):\n",
+    "    \"\"\" get the camera projection points of the landmarks\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): _description_\n",
+    "        camera_height (_type_): _description_\n",
+    "        calibration_matrix (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    if isinstance(robot_pose, list):\n",
+    "        robot_pose = np.array(robot_pose)\n",
+    "    if isinstance(scene_pt, list):\n",
+    "        scene_pt = np.array(scene_pt)\n",
+    "    Tcam_inv = cam_pose_matrix(robot_pose)\n",
+    "    xs_hat, ys_hat, zs_hat = get_cam_frame_coord(scene_pt, Tcam_inv)\n",
+    "    ux,uy = project(xs_hat, ys_hat, zs_hat)\n",
+    "\n",
+    "    return ux, uy\n",
     "\n",
     "def loss_func(vars,x0,P0):\n",
     "    \"\"\"the loss function to be minimized by the scipy.optimize.minimize function\n",
@@ -516,6 +572,80 @@
     "print(loss)\n",
     "print(grad)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulation loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a model to sample scene points 3D location given the pixel value\n",
+    "def pixel_to_3d(ux,uy,robot_pose,zs_min=0.5,zs_max=5):\n",
+    "    # sample a zs\n",
+    "    zs_hat = zs_min + np.random.rand()*(zs_max-zs_min)\n",
+    "\n",
+    "    xs_hat = (ux-PX)/FX*zs_hat\n",
+    "    ys_hat = (uy-PY)/FY*zs_hat\n",
+    "    Tcam_inv = cam_pose_matrix(robot_pose)\n",
+    "    xs,ys,zs = get_world_coord(np.array([xs_hat,ys_hat,zs_hat]),Tcam_inv)\n",
+    "    return xs,ys,zs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-0.5, 0.5)\n",
+      "(0.5, 0.5)\n",
+      "(0.5466836924856497, 0.27334184624282487, 0.7266581537571751)\n",
+      "(2.7584356646693244, -1.3792178323346622, -0.3792178323346622)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define current robot pose and ground truth scene point location\n",
+    "robot_pose = [0,0,0]\n",
+    "scene_pt1_gt = [2.0,1.0,0.0]\n",
+    "scene_pt2_gt = [2.0,-1.0,0.0]\n",
+    "\n",
+    "# get pixel value\n",
+    "ux1,uy1 = observation_model(robot_pose, scene_pt1_gt)\n",
+    "ux2,uy2 = observation_model(robot_pose, scene_pt2_gt)\n",
+    "print((ux1,uy1))\n",
+    "print((ux2,uy2))\n",
+    "\n",
+    "# get 3d location beliefs\n",
+    "np.random.seed(9)\n",
+    "pt1_bel = pixel_to_3d(ux1,uy1,np.array(robot_pose))\n",
+    "pt2_bel = pixel_to_3d(ux2,uy2,np.array(robot_pose))\n",
+    "print(pt1_bel)\n",
+    "print(pt2_bel)\n",
+    "\n",
+    "# construct initial state\n",
+    "x0 = np.array(robot_pose+[*pt1_bel]+[*pt2_bel])[:,np.newaxis]\n",
+    "\n",
+    "# initialize P0, large variance for the scene points\n",
+    "P0 = np.diag([0,0,0]+[1e6,1e6,1e6]*2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
