Update Constraint function

--- a/entropy_planning.ipynb
+++ b/entropy_planning.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,50 +492,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.635519446635031\n",
-      "[[-6.29636742e-02]\n",
-      " [ 6.30158440e-04]\n",
-      " [-3.01964029e-02]\n",
-      " [-6.29636742e-01]\n",
-      " [ 6.30158440e-03]\n",
-      " [-3.01964029e-01]\n",
-      " [ 6.29636742e-01]\n",
-      " [-6.30158440e-03]\n",
-      " [ 6.22350197e-03]\n",
-      " [ 6.29636742e-01]\n",
-      " [-6.30158440e-03]\n",
-      " [ 6.22350197e-03]\n",
-      " [-1.67280159e-02]\n",
-      " [ 1.86110771e-01]\n",
-      " [-1.41356599e-02]\n",
-      " [-1.67280159e-01]\n",
-      " [ 1.86110771e+00]\n",
-      " [-1.41356599e-01]\n",
-      " [ 1.67280159e-01]\n",
-      " [-1.86110771e+00]\n",
-      " [ 4.35969678e-03]\n",
-      " [ 1.67280159e-01]\n",
-      " [-1.86110771e+00]\n",
-      " [ 4.35969678e-03]\n",
-      " [-2.90846154e-02]\n",
-      " [-6.12818259e-02]\n",
-      " [-1.37466552e-02]\n",
-      " [-2.90846154e-01]\n",
-      " [-6.12818259e-01]\n",
-      " [-1.37466552e-01]\n",
-      " [ 2.90846154e-01]\n",
-      " [ 6.12818259e-01]\n",
-      " [ 2.40631796e-03]\n",
-      " [ 2.90846154e-01]\n",
-      " [ 6.12818259e-01]\n",
-      " [ 2.40631796e-03]]\n"
+      "[[ 0.04]\n",
+      " [ 0.04]\n",
+      " [ 0.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [ 1.  ]\n",
+      " [-1.  ]\n",
+      " [ 1.  ]]\n"
      ]
     }
    ],
@@ -569,8 +541,70 @@
     "        vars = np.concatenate([vars,tmp],axis=0)\n",
     "\n",
     "loss, grad = loss_func(vars,x0,P0)\n",
+    "\n",
     "print(loss)\n",
-    "print(grad)"
+    "print(grad)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Constraint function for SLSQP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steps (N):  3\n",
+      "(3, 9, 1) (6, 3, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of u_un & u_max\n",
+    "u_min = 0.0\n",
+    "u_max = 1.0\n",
+    "\n",
+    "x_dim = x0.shape[0]\n",
+    "u_dim = POSE_DIM\n",
+    "dim = x_dim+u_dim\n",
+    "\n",
+    "def constraint_func(vars):\n",
+    "    N = int(len(vars)/12)\n",
+    "    print(\"Steps (N): \", N)\n",
+    "    state_constraints = []\n",
+    "    control_constraints = []\n",
+    "    \n",
+    "    prev_state = None\n",
+    "\n",
+    "    for n in range(0, len(vars), 12):\n",
+    "        # print(n)\n",
+    "        state = vars[n:n+x_dim]\n",
+    "        control = vars[n+9:n+12]\n",
+    "\n",
+    "        if n == 0:\n",
+    "            state_constraints.append(state - x0)\n",
+    "        else:\n",
+    "            # state transition contraint: x_n = f(x_{n-1}, u_n, w_n)\n",
+    "            state_constraints.append(state - state_transition(prev_state, control, 0))\n",
+    "\n",
+    "        # control input constraints u_min <= u_n <= u_max\n",
+    "        control_constraints.append(control-u_min) # u_min <= u_n\n",
+    "        control_constraints.append(u_max-control) # u_n <= u_max\n",
+    "\n",
+    "        prev_state = state\n",
+    "\n",
+    "    return np.array(state_constraints), np.array(control_constraints)\n",
+    "\n",
+    "state_contraints, control_contraints = constraint_func(vars)\n",
+    "print(state_contraints.shape, control_contraints.shape)"
    ]
   },
   {
@@ -664,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
