Update contraint function

--- a/entropy_planning.ipynb
+++ b/entropy_planning.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -563,12 +563,20 @@
      "output_type": "stream",
      "text": [
       "Steps (N):  3\n",
-      "(3, 9, 1) (6, 3, 1)\n"
+      "{'type': 'eq', 'fun': array([[ 1.46],\n",
+      "       [-1.34],\n",
+      "       [ 1.4 ],\n",
+      "       [-0.98],\n",
+      "       [-0.98],\n",
+      "       [-1.  ],\n",
+      "       [ 0.  ],\n",
+      "       [ 2.  ],\n",
+      "       [ 0.  ]])}\n"
      ]
     }
    ],
    "source": [
-    "# Example of u_un & u_max\n",
+    "# Example of u_min & u_max\n",
     "u_min = 0.0\n",
     "u_max = 1.0\n",
     "\n",
@@ -577,10 +585,11 @@
     "dim = x_dim+u_dim\n",
     "\n",
     "def constraint_func(vars):\n",
-    "    N = int(len(vars)/12)\n",
+    "    N = int(len(vars)/dim)\n",
     "    print(\"Steps (N): \", N)\n",
-    "    state_constraints = []\n",
-    "    control_constraints = []\n",
+    "    state_cons = []\n",
+    "    control_cons_1 = []\n",
+    "    control_cons_2 = []\n",
     "    \n",
     "    prev_state = None\n",
     "\n",
@@ -590,21 +599,31 @@
     "        control = vars[n+9:n+12]\n",
     "\n",
     "        if n == 0:\n",
-    "            state_constraints.append(state - x0)\n",
+    "            state_cons.append(state - x0)\n",
     "        else:\n",
     "            # state transition contraint: x_n = f(x_{n-1}, u_n, w_n)\n",
-    "            state_constraints.append(state - state_transition(prev_state, control, 0))\n",
+    "            state_cons.append(state - state_transition(prev_state, control, 0))\n",
     "\n",
     "        # control input constraints u_min <= u_n <= u_max\n",
-    "        control_constraints.append(control-u_min) # u_min <= u_n\n",
-    "        control_constraints.append(u_max-control) # u_n <= u_max\n",
+    "        control_cons_1.append(control-u_min) # u_min <= u_n\n",
+    "        control_cons_2.append(u_max-control) # u_n <= u_max\n",
     "\n",
     "        prev_state = state\n",
     "\n",
-    "    return np.array(state_constraints), np.array(control_constraints)\n",
+    "    return np.array(state_cons), np.array(control_cons_1), np.array(control_cons_2)\n",
     "\n",
-    "state_contraints, control_contraints = constraint_func(vars)\n",
-    "print(state_contraints.shape, control_contraints.shape)"
+    "state_constraints, control_constraints_1,control_constraints_2 = constraint_func(vars)\n",
+    "# print(state_cons.shape, control_cons_2.shape)\n",
+    "\n",
+    "# An example for SLSQP\n",
+    "# state_cons = {'type':'eq',\n",
+    "#               'fun': state_constraints[0]}\n",
+    "# control_cons_1 = {'type': 'ineq',\n",
+    "#                 'fun': control_constraints_1[0]}\n",
+    "# control_cons_2 = {'type': 'ineq',\n",
+    "#                 'fun': control_constraints_2[0]}\n",
+    "\n",
+    "# result = minimize(objective_function {Loss(P)}, x0, method='SLSQP', constraints=[state_cons, control_cons_1, control_cons_2])"
    ]
   },
   {
